--- a/refs-portals-and-fragments/public/index.html
+++ b/refs-portals-and-fragments/public/index.html
@@ -9,11 +9,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- NOTE Adding portals to be rendered alongside the root div -->
+    <div id="backdrop-root"></div>
+    <div id="overlay-root"></div>
+
     <div id="root"></div>
   </body>
 </html>
